started Gal HW04 and HW05

--- a/Galois_spr22/HW04.tex
+++ b/Galois_spr22/HW04.tex
@@ -1,16 +1,38 @@
 \documentclass[12pt,english]{article}
 \usepackage{xianzhi}
 
-\title{Galois Theory hw4}
-\author{xianzhi wang}
-\date{August 2022}
+\title{Galois Theory HW04}
+\author{Xianzhi}
+\date{Due March 11, 2022}
 
 \begin{document}
 
 \maketitle
-Question 1 and 2 are not hard.
 
-\section*{Q3}
+\section*{Exercise 5.3.9}
+\begin{question}
+    Is the polynomial $X^4 -2$ irreducible over the field $\Q(\sqrt{3})$?
+\end{question}
+
+\section*{Exercise 6.4.6}
+\begin{question}
+    Let $L$ be the splitting field over $\Q$ of $X^5 - 2$ over $\Q$. 
+    Show that the Galois group $G:=\Gamma(L:\Q)$ has order $20$,
+    and $G$ has a normal subgroup $N$ with $\lvert N \rvert = 5$
+    such that the factor group $G/N$ is cyclic.
+\end{question}
+
+\section*{Exercise 6.4.7}
+\begin{question}
+    Let $p$ be an irreducible polynomial over a subfield $K$ of $\C$, and denote by $L$ the splitting field of $p$ over $K$. 
+    Show that if the Galois group $\Gamma (L:K)$ is abelian (i.e. commutative), 
+    then its order equals the degree of $p$.
+\end{question}
+
+
+
+
+\section*{A question from HW02}
 \begin{question}
 Show number of automorphisms of a finite degree field extension divides the degree of the field extension. 
 \end{question}
