--- a/Galois_spr22/HW02.tex
+++ b/Galois_spr22/HW02.tex
@@ -1,42 +1,42 @@
 \documentclass[12pt,english]{article}
 \usepackage{xianzhi}
 
-\title{Galois Theory hw2}
-\author{xianzhi wang}
-\date{August 2022}
+\title{Galois Theory HW02}
+\author{Xianzhi}
+\date{Due Feb 25, 2022}
 
 \begin{document}
 
 \maketitle
 
-\section*{Q1}
+\section*{Exercise 3.2.5}
 \begin{question}
-Show $\pi - \sqrt{\pi}$ is not algebraic over $\Q$.
+    question
 \end{question}
-First we show $\sqrt{\pi}$ is not algebraic over $\Q$. Assume for contradiction that $\sqrt{\pi}$ is algebraic over $\Q$, so $\exists$ $a_n,\cdot, a_0\in \Q$ not all zero such that
-\begin{align*}
-    a_n(\sqrt{\pi})^n +\cdots+a_1 \sqrt{\pi} +a_0 = 0 \quad \text{denote by } p(\sqrt{\pi}) = 0
-\end{align*}
-Consider 
-\begin{align*}
-    0 = p(\sqrt{\pi})p(-\sqrt{\pi}) = q(\pi) \text{ for some polynomial } q
-\end{align*} some algebra omitted.
-Thus, $q(\pi) = 0$, so $\pi$ is algebraic over $\Q$, contradiction. \\
 
-Now assume for contradiction $\pi-\sqrt{\pi}$ is algebraic over $\Q$, so $\exists$ $b_n \cdots, b_0 \in \Q$ not all zero s.t.
+\section*{Exercise 4.4.9}
+\begin{question}
+    question
+\end{question}
+
+\section*{Exercise 4.4.10}
+\begin{question}
+Show number of automorphisms of a finite degree field extension divides the degree of the field extension. 
+\end{question}
+Let $K \subset L, L:K$ be a finite degree field extension. Recall
 \begin{align*}
-    b_n(\pi-\sqrt{\pi})^n+\cdots +b_1(\pi-\sqrt{\pi})+b_0 = 0
-\end{align*} multiply out this expression, we obtain a not all zero polynomial of $\sqrt{\pi}$ such that it equals $0$. A contradiction. 
-
-\section*{Q2}
-$i$ is not contained in the splitting field of $x^3-2$ over $\Q$.\\
-
-We know the splitting field of $X^3-2$ is $\Q(\sqrt[3]{2}, \omega)$, first we show $i \not\in \Q(\omega)$. Assume for contradiction $i \in \Q(w) \implies \sqrt{3} \in \Q(\omega)$, which implies 
+    \Gamma(L:K) &= \{g \in \Gamma(L): g(x) = x \quad \forall x \in K\}\\
+    \text{WTS:} \quad |\Gamma(L:K)| &\mid [L:K].
+\end{align*} Recall Artin's theorem, let $\Gamma(L:K)$ be the finite subgroup. (Since $|\Gamma(L:K)|$ is bounded by $[L:K]<\infty$.) and 
 \begin{align*}
-    \Q(i,\sqrt{3}) \subset \Q(\omega),
-\end{align*} but the LHS has degree 4 over $\Q$, and RHS has degree 2 over $\Q$. \\
+    M = \{x \in L: \forall g \in \Gamma(L:K): g(x)= x\}
+\end{align*} so $K \subset M$, and $[L:M]=|\Gamma(L:K)|$. Thus, consider $K \subset M \subset L$,
+\begin{align*}
+    [L:K] = [L:M][M:K]
+\end{align*} where $[L:M] = |\Gamma(L:K)|$, so $|\Gamma(L:K)|$ divides $[L:K]$.
 
-$i \not\in \Q(\omega)$, so $\deg_{\Q(\omega)}i >1$. Thus, $\Q(\omega,i)$ is degree $4$ extension over $\Q$. However, if assume for contradiction $i \in \Q(\omega,\sqrt[3]{2}$, then $\Q(\omega,i) \subset \Q(\omega, \sqrt[3]{2})$ but the former has degree 4, and the latter has degree 6, and $4 \nmid 6$.
+
+
 
 
 
