--- a/Galois_spr22/HW04.tex
+++ b/Galois_spr22/HW04.tex
@@ -23,7 +23,14 @@ factor into 2 degree two factor (factor means polynomial).
 \textbf{Case 1}
 
 $X^4 -2$ has a degree one factor in $\Q(\sqrt{3})$. 
-so it has a root in 
+so it has a root in $\Q(\sqrt{3})$. The roots of $X^4 - 2$ are
+\begin{align}
+    \sqrt[4]{2}, \ \sqrt[4]{2}, \ - \sqrt[4]{2}, \ - i \sqrt[4]{2}. 
+\end{align}
+since $\Q (\sqrt{3})$ is a degree $2$ extension, 
+(Because $\sqrt{3}$ has minimal polynomial $X^2 -3$, which is irreducible by Eisenstein,)
+
+
 
 
 \section*{Exercise 6.4.6}
