--- a/Galois_spr22/HW04.tex
+++ b/Galois_spr22/HW04.tex
@@ -25,13 +25,47 @@ factor into 2 degree two factor (factor means polynomial).
 $X^4 -2$ has a degree one factor in $\Q(\sqrt{3})$. 
 so it has a root in $\Q(\sqrt{3})$. The roots of $X^4 - 2$ are
 \begin{align}
-    \sqrt[4]{2}, \ \sqrt[4]{2}, \ - \sqrt[4]{2}, \ - i \sqrt[4]{2}. 
+    \sqrt[4]{2}, \ i \sqrt[4]{2}, \ - \sqrt[4]{2}, \ - i \sqrt[4]{2}. 
 \end{align}
 since $\Q (\sqrt{3})$ is a degree $2$ extension, 
 (Because $\sqrt{3}$ has minimal polynomial $X^2 -3$, which is irreducible by Eisenstein,)
-
-
-
+\begin{align}
+    \mathbb{Q}(\sqrt[2]{3}) = \left\{ a + b \sqrt[2]{3} \ | \ a,b \in \mathbb{Q} \right\} \subseteq \mathbb{R},
+\end{align}
+since $i \sqrt[4]{2}, - i \sqrt[4]{2} \not\in \mathbb{R}$,
+we conclude that they are not in $\mathbb{Q}(\sqrt[2]{3})$.\\
+Now, observe $\sqrt[4]{2}$ and $- \sqrt[4]{2}$ 
+has $X^4 - 2$ as their minimal polynomial over $\mathbb{Q}$,
+and $X^4 -2$ is irreducible over $\mathbb{Q}$ by Eisenstein,
+so if $\sqrt[4]{2}$ were to be in $\mathbb{Q}(\sqrt[2]{3})$,
+then necessarily $\mathbb{Q}(\sqrt[4]{2}) \subseteq \mathbb{Q}(\sqrt[2]{3}),$
+but $\mathbb{Q}(\sqrt[4]{2})$ is degree 4 extension,
+and $\mathbb{Q}(\sqrt[2]{3})$ is degree 2 extension,
+by the tower law, we have a contradiction.
+The argument for $- \sqrt[4]{2}$ is the same. End of Case 1.\\
+\textbf{Case 2}\\
+$X^4 - 2$ factor into 2 degree two polynomial over $\mathbb{Q}(\sqrt[2]{3})$, thus,
+\begin{align}
+    (X^2 - \sqrt{2})(X^2 + \sqrt{2})
+\end{align} 
+and $\sqrt[2]{2} \in \mathbb{Q}(\sqrt[2]{3}).$\\
+\textit{Comment from instructor: There are other ways to factor
+$X^4 - 2$ as the product of two quadratic polynomials.}\\
+Since $\mathbb{Q}(\sqrt{3})$ is degree 2 extension, we could write
+$\sqrt{2} = a + b \sqrt{3}$ for $a,b \in \mathbb{Q}$.\\
+So $2 = a^2 + 3 b^2 + 2ab \sqrt{3}$. Thus,
+\begin{align}
+    2ab &= 0\\
+    2 &= a^2 + 3b^2
+\end{align}
+If $a=0$, then $2/3 = b^2$, which implies $b=\sqrt{\frac{ 2 }{ 3 }}$, 
+which is a contradiction with $b \in \mathbb{Q}$.\\
+If $b=0$, then $2=a^2$ which implies $a = \sqrt{2}$, 
+which is a contradiction with $a \in \mathbb{Q}$.\\
+If $a,b$ both zero, then $2=0$, which is a contradiction.\\
+Thus $\sqrt{2} \not\in \mathbb{Q}(\sqrt{3})$. 
+So $X^4 - 2$ cannot factor into 2 degree two polynomial over $\mathbb{Q}(\sqrt{3})$.
+End of Case 2.
 
 \section*{Exercise 6.4.6}
 \begin{question}
