--- a/AAA_spr22/preambleBloat.tex
+++ b/AAA_spr22/preambleBloat.tex
@@ -169,6 +169,11 @@
 \newtheorem{Corollary}{corollary}
 \newtheorem{Question}{question}
 
-
+\newcommand\restr[2]{{% we make the whole thing an ordinary symbol
+  \left.\kern-\nulldelimiterspace % automatically resize the bar with \right
+  #1 % the function
+  \vphantom{\big|} % pretend it's a little taller at normal size
+  \right|_{#2} % this is the delimiter
+  }}
 
 % \begin{document}
