--- a/AAA_spr22/HW04.tex
+++ b/AAA_spr22/HW04.tex
@@ -58,7 +58,7 @@
     \begin{align}
         \frac{ N \cdot N' }{ N } &\cong \frac{ N' }{ N \cap N' }\\
         \frac{ \lvert N \cdot N'\rvert }{\lvert N \rvert} 
-        \&= \lvert \frac{ N \cdot N' }{ N }\rvert
+        &= \lvert \frac{ N \cdot N' }{ N }\rvert
         = \lvert \frac{ N' }{ N \cap N' }\rvert \\
         &\implies \lvert N \cdot N' \rvert 
         = \lvert \frac{ N' }{ N \cap N' }\rvert \cdot \lvert N \rvert \\
@@ -69,8 +69,10 @@
         \lvert \frac{ N' }{ N \cap N' }\rvert &= \frac{ \lvert N' \rvert }{ \lvert N \cap N' \rvert }\\
         &\implies p \hspace{-4pt}\not| \hspace{2pt} \lvert \frac{ N' }{ N \cap N' }\rvert.
     \end{align}
-    Also, $p \hspace{-4pt}\not| \hspace{2pt} \lvert N \rvert$.\\
+    Also, $p \hspace{-4pt}\not| \hspace{2pt} \lvert N \rvert$
     implies $p \hspace{-4pt}\not| \hspace{2pt} \lvert N \cdot N' \rvert.$\\
+
+    Since we have $N \cdot N' \leq G$, and $\lvert N \cdot N'\rvert
 
 
     
