--- a/AAA_spr22/preambleBloat.tex
+++ b/AAA_spr22/preambleBloat.tex
@@ -2,6 +2,7 @@
 \usepackage{fancyhdr}
 \usepackage{extramarks}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{amsfonts}
 \usepackage{tikz}
@@ -131,6 +132,7 @@
 \newcommand{\cH}{\mathcal H}
 \newcommand{\cI}{\mathcal I}
 \newcommand{\cJ}{\mathcal J}
+\newcommand{\cK}{\mathcal K}
 \newcommand{\cL}{\mathcal L}
 \newcommand{\cM}{\mathcal M}
 \newcommand{\cN}{\mathcal N}
