--- a/AAA_spr22/HW11.tex
+++ b/AAA_spr22/HW11.tex
@@ -267,13 +267,20 @@ HW11
         = g^{-1}(\alpha_2 \beta_2) g \in H = \langle (S_n)_T, g \rangle
     \end{align}
     $(\alpha_2, \beta_2) \in (S_n)_T$.
-    I think for $n \in \mathbb{N}$, 
-    
-    
-
+    I think for $n \in \mathbb{N}, \ g^n(\alpha_2 \beta_2) (g^n)^{-1} $, 
+    could express all the transpositions.
+    Hence generate $S_n$, 
+    but I don't know how to show it exactly.
     
     
 \end{homeworkProblem}
 
 
 \end{document}
+
+
+
+
+
+
+
